<resources>
    <string name="app_name">Java Compiler</string>
    <string name="str_btn_run">Run</string>
    <string name="str_txt_output">Output</string>
    <string name="err_network">Network Exception</string>
    <string name="title_activity_tutorial">tutorial</string>
    <string name="question">Question</string>
    <string name="tab">Tab</string>
    <string name="println">println</string>
    <string name="enter_name">Enter Name</string>
    <string name="cancel">Cancel</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="userpassword">UserPassword</string>
    <string name="username">UserName</string>
    <string name="not_have_account">Not have Account?</string>
    <string name="score">Score</string>
    <string name="quit">quit</string>
</resources>
