<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Login"
        android:textSize="60sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:textColorHint="#DDDDDD"
        android:textSize="30sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:hint="@string/userpassword"
        android:paddingStart="10dp"
        android:textColorHint="#DDDDDD"
        android:textSize="30sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_pw"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/not_have_account"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


</RelativeLayout>