<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.ybdesire.com.javacompiler.Excises_Java_Compiler">

    <Button
        android:id="@+id/button_tab"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_below="@id/excise"
        android:text="@string/tab"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_println"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_below="@id/excise"
        android:layout_toEndOf="@id/button_tab"
        android:layout_toRightOf="@id/button_tab"
        android:text="@string/println"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_quote"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_below="@id/excise"
        android:layout_toEndOf="@id/button_println"
        android:layout_toRightOf="@id/button_println"
        android:text='"'
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_semi"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_below="@id/excise"
        android:layout_toEndOf="@id/button_quote"
        android:layout_toRightOf="@id/button_quote"
        android:text=';'
        android:textAllCaps="false"
        android:textSize="12sp" />


    <example.ybdesire.com.javacompiler.CodeEditText
        android:id="@+id/text_input_code"
        android:layout_width="fill_parent"
        android:layout_height="261dp"
        android:layout_below="@id/button_tab"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textCursorDrawable="@drawable/black_cursor" />

    <TextView
        android:id="@+id/txt_output"
        android:layout_width="fill_parent"
        android:layout_height="187dp"
        android:layout_below="@id/text_input_code"
        android:text="@string/str_txt_output" />

    <Button
        android:id="@+id/button_compile"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/str_btn_run"
        android:textAllCaps="false"
        android:textSize="18sp" />


    <Button
        android:id="@+id/tips"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/button_compile"
        android:layout_toLeftOf="@id/button_compile"
        android:text="Tips"
        android:textAllCaps="false"
        android:textSize="18sp" />


</RelativeLayout>
